# archpkg-helper

./: .gitignore  ARCHITECTURE_DIAGRAM.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contribute.md  GUI_GUIDE.md  GUI_IMPLEMENTATION.md  README.md  archpkg-helper.desktop  archpkg.py  arjax.desktop  cli.py  demo_gui.py  install.sh  package-lock.json  pyproject.toml  requirements-v2.txt  setup.py  test_gui_structure.py  test_typer.py  test_web_implementation.py
.github/scripts/: check-duplicates.js
archpkg/: __main__.py  advisor.py  cli.py  command_gen.py  config.py  config_manager.py  download_manager.py  github_install.py  gui.py  installed_apps.py  monitor.py  paths.py  pkgs_org.py  search_apt.py  search_aur.py  search_dnf.py  search_flatpak.py  search_pacman.py  search_ranking.py  search_rpm.py  search_snap.py  search_zypper.py  security.py  snapshot.py  suggest.py  update_manager.py  web.py
archpkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
archpkg/config/: base.py  manager.py
archpkg/integrations/: cache.py  github.py  security.py
archpkg/intelligence/: advisor.py  suggest.py
archpkg/interfaces/: cli.py  gui.py
archpkg/package_management/: command_gen.py  download.py  installed.py  snapshot.py  update.py
archpkg/search/: apt.py  aur.py  dnf.py  flatpak.py  pacman.py  ranking.py  snap.py  zypper.py
archpkg/system/: monitor.py
archpkg/templates/: home.html  installed.html  search.html
arjax/config/: base.py  logging.py  manager.py
arjax/installation/: __init__.py  models.py  orchestrator.py  providers.py  recipes.py
arjax/integrations/: cache.py  github.py  pkgs_org.py  security.py
arjax/intelligence/: advisor.py  suggest.py
arjax/interfaces/: cli.py  gui.py
arjax/package_management/: command_gen.py  download.py  installed.py  snapshot.py  update.py
arjax/recipes/: brave.yaml  docker.yaml  vscode.yaml
arjax/search/: apt.py  aur.py  dnf.py  flatpak.py  pacman.py  ranking.py  snap.py  zypper.py
arjax/system/: monitor.py
notes/: ENHANCEMENTS.md  GUI_GUIDE.md
systemd/: archpkg-monitor.service  archpkg-monitor.timer  arjax-monitor.service  arjax-monitor.timer  service-manager.sh
tests/: test_providers.py  test_search_pacman.py
