[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archpkg"
version = "0.1.1"
description = "Your ArchPkg CLI tool"
authors = [{ name="AdmGenSameer", email="sameers00324@gmail.com" }]
readme = "README.md"
requires-python = ">=3"

dependencies = [
  "requests",
  "rich",
  "typer[all]",
  "distro",
  "flask",
  "beautifulsoup4"
]

[project.optional-dependencies]
github = ["GitPython"]
gui = ["PyQt5>=5.15.0"]
all = ["GitPython", "PyQt5>=5.15.0"]

[project.scripts]
archpkg = "archpkg.cli:main"

[tool.setuptools]
packages = ["archpkg"]

[tool.setuptools.package-data]
archpkg = ["*.yaml", "*.yml", "*.json", "templates/*.html", "templates/**/*"]

[tool.setuptools.data-files]
"share/applications" = ["archpkg-helper.desktop"]
