[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arjax"
version = "0.1.1"
description = "Arjax CLI tool"
authors = [{ name="AdmGenSameer", email="sameers00324@gmail.com" }]
readme = "README.md"
requires-python = ">=3"

dependencies = [
  "requests",
  "rich",
  "typer[all]",
  "distro",
  "beautifulsoup4",
  "rapidfuzz>=3.0.0",
  "PyYAML"
]

[project.optional-dependencies]
github = ["GitPython"]
gui = ["PyQt5>=5.15.0"]
all = ["GitPython", "PyQt5>=5.15.0"]

[project.scripts]
arjax = "arjax.interfaces.cli:main"
archpkg = "arjax.interfaces.cli:main"

[tool.setuptools]
packages = [
  "arjax",
  "arjax.interfaces",
  "arjax.search",
  "arjax.config",
  "arjax.package_management",
  "arjax.intelligence",
  "arjax.integrations",
  "arjax.installation",
  "arjax.system",
  "arjax.core"
]

[tool.setuptools.package-data]
arjax = ["*.yaml", "*.yml", "recipes/*.yaml", "recipes/*.yml", "*.json", "templates/*.html", "templates/**/*"]

[tool.setuptools.data-files]
"share/applications" = ["arjax.desktop"]
